<resources>
    <string name="app_name">HarryPotterApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="books">Books</string>
    <string name="characters">Characters</string>
    <string name="spells">Spells</string>
    <string name="species">Species</string>
    <string name="fav">FAV</string>
    <string name="all">ALL</string>
    <string name="az">A-Z</string>
    <string name="za">Z-A</string>
    <string name="random">Rndm</string>
    <string name="harry_potter_app">Harry Potter App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="empty_list">No results found...</string>
    <string name="welcome">Welcome!</string>
</resources>